# gRPCServerAndClient

./: .gitignore  CMakeLists.txt
client/: client.py  data_transfer_pb2.py  data_transfer_pb2_grpc.py
include/: data_classes.cpp  data_classes.h
proto/: data_transfer.proto
src/: ProcessA_Server.cpp  data_classes.cpp
